--- a/jenny-api/jenny-api-sys/pom.xml
+++ b/jenny-api/jenny-api-sys/pom.xml
@@ -39,6 +39,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>org.samba.jcifs</groupId>
+    <artifactId>jcifs</artifactId>
+    <version>1.3.3</version>
+</dependency>
 	</dependencies>
 	<dependencyManagement>
 	    <dependencies>
