用户资料图像编辑功能

--- a/jenny-api/jenny-api-doc/pom.xml
+++ b/jenny-api/jenny-api-doc/pom.xml
@@ -8,8 +8,8 @@
 		<artifactId>jenny-api</artifactId>
 		<version>1.0.0-RELEASE</version>
 	</parent>
-	<artifactId>jenny-api-sys</artifactId>
-	<name>jenny-api-sys</name>
+	<artifactId>jenny-api-doc</artifactId>
+	<name>jenny-api-doc</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,13 +22,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.daijie</groupId>
-			<artifactId>daijie-shiro-spring-boot-starter</artifactId>
+			<artifactId>daijie-hadoop-spring-boot-starter</artifactId>
 			<version>${daijie.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.daijie</groupId>
-			<artifactId>jenny-common-feign-sys</artifactId>
-			<version>${daijie.jenny.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
