--- a/jenny-server/jenny-server-eureka/src/main/resources/bootstrap.yml
+++ b/jenny-server/jenny-server-eureka/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
-spring.application.name: eureka-server
+spring.application.name: server-eureka
 server.port: 8761
 
 eureka.client.registerWithEureka: false
