访问日志功能

--- a/jenny-api/jenny-api-sys/src/main/resources/bootstrap.yml
+++ b/jenny-api/jenny-api-sys/src/main/resources/bootstrap.yml
@@ -79,4 +79,4 @@ logging.level.org.daijie: DEBUG
 
 feign.sys: cloud-sys
 
-swagger.api.basePackage: org.daijie.jenny.api
+swagger.basePackage: org.daijie.jenny.api
