--- a/jenny-server/jenny-server-shiro/src/main/resources/bootstrap.yml
+++ b/jenny-server/jenny-server-shiro/src/main/resources/bootstrap.yml
@@ -1,5 +1,9 @@
+#服务名称
 spring.application.name: server-shiro
+#服务端口号
 server.port: 12000
+#header头允许存放的最大值
+server.maxHttpHeaderSize: 100000
 
 #eureka注册中心地址
 eureka.client.serviceUrl.defaultZone: http://127.0.0.1:8761/eureka/
@@ -28,13 +32,13 @@ ribbon.ReadTimeout: 1000
 #添加自定义Filter，以“,”号隔开
 shiro.filterClasses: org.daijie.shiro.filter.SecurityFilter
 #请求权限，比如请求路径/api/user，需要有角色为USER,ADMIN才能访问。（/api/user等于api_user，/api/user/**等于api_user_）
-shiro.matcher.sys_sysindex_: security
-shiro.matcher.sys_sysuser_: security
-shiro.matcher.sys_sysicon_: security
-shiro.matcher.sys_systable_: security
-shiro.matcher.sys_sysrole_: security
-shiro.matcher.sys_sysmenu_: security
-shiro.matcher.sys_sysserver_: security
+shiro.matcher.SYS_sysindex_: security
+shiro.matcher.SYS_sysuser_: security
+shiro.matcher.SYS_sysicon_: security
+shiro.matcher.SYS_systable_: security
+shiro.matcher.SYS_sysrole_: security
+shiro.matcher.SYS_sysmenu_: security
+shiro.matcher.SYS_sysserver_: security
 
 #是否开启redis集群
 shiro.redis.cluster: false
