--- a/jenny-common/jenny-common-feign/pom.xml
+++ b/jenny-common/jenny-common-feign/pom.xml
@@ -11,5 +11,6 @@
 	<build />
 	<modules>
 		<module>jenny-common-feign-sys</module>
+		<module>jenny-common-feign-health</module>
 	</modules>
 </project>
