--- a/jenny-cloud/jenny-cloud-sys/src/main/resources/bootstrap.yml
+++ b/jenny-cloud/jenny-cloud-sys/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 #服务名称
 spring.application.name: cloud-sys
 #服务端口号
-server.port: 12701
+server.port: 12401
 
 #eureka注册中心地址
 eureka.client.serviceUrl.defaultZone: http://127.0.0.1:8761/eureka/
@@ -64,4 +64,22 @@ spring.jackson.time-zone: Asia/Shanghai
 http.bodyByParamEanble: true
 
 logging.level.org.daijie: DEBUG
+
+#启用Spring Boot Admin Client
+spring.boot.admin.client.enabled: true
+#这是一个必填的属性，将当前程序的信息注册到Admin Server中，你需要给出Server URL地址，如果需要注册到多个Admin Server，可以用逗号分隔开来
+spring.boot.admin.url: http\://localhost\:12503
+#当客户端程序发起注册的时候，需要一个请求地址。
+spring.boot.admin.api-path: api/application
+#如果Admin端设置了用户名密码访问，你也需要在客户端配置它们。
+spring.boot.admin.username: admin
+spring.boot.admin.password: admin
+#注册间隔（程序启动后多久发出注册请求
+spring.boot.admin.period: 10000
+#如果设置成true，那么上面那个属性就不需要设置了，程序会自动在启动成功后立刻发出注册申请。
+spring.boot.admin.auto-registration: true
+#当Admin server关闭的时候，自动注销。
+spring.boot.admin.auto-deregistration: true
+#如果你注册到了多个Admin Server，当他为true的时候，则只会向一个admin server进行注册，否则会同时向所有的admin server进行注册
+spring.boot.admin.register-once: true
 
