--- a/jenny-api/jenny-api-doc/pom.xml
+++ b/jenny-api/jenny-api-doc/pom.xml
@@ -33,5 +33,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
