--- a/jenny-server/jenny-server-admin/pom.xml
+++ b/jenny-server/jenny-server-admin/pom.xml
@@ -37,6 +37,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
