--- a/jenny-server/jenny-server-eureka/src/main/resources/bootstrap.yml
+++ b/jenny-server/jenny-server-eureka/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 spring.application.name: server-eureka
 server.port: 8761
 
-eureka.client.registerWithEureka: false
-eureka.client.fetchRegistry: false
+#eureka.client.registerWithEureka: false
+#eureka.client.fetchRegistry: false
