--- a/jenny-server/jenny-server-shiro/pom.xml
+++ b/jenny-server/jenny-server-shiro/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>daijie-shiro-security-spring-boot-starter</artifactId>
 			<version>${daijie.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
