--- a/jenny-server/jenny-server-shiro/src/main/resources/bootstrap.yml
+++ b/jenny-server/jenny-server-shiro/src/main/resources/bootstrap.yml
@@ -21,7 +21,7 @@ hystrix.threadpool.default.coreSize: 100
 #请求连接的超时时间
 ribbon.ConnectTimeout: 20000
 #请求处理的超时时间
-ribbon.ReadTimeout: 1000
+ribbon.ReadTimeout: 5000
 ##对所有操作请求都进行重试
 #ribbon.OkToRetryOnAllOperations: true
 ##对当前实例的重试次数
@@ -79,21 +79,21 @@ http.bodyByParamEanble: true
 zuul.ignored-services: /*
 #默认zuul会过滤掉cookie等header信息，空为不过滤
 zuul.sensitive-headers: 
-zuul.routes.sys.path: /SYS/**
+zuul.routes.sys.path: /sys/**
 zuul.routes.sys.serviceId: api-sys
 zuul.routes.sys.serviceName: 系统管理
 zuul.routes.sys.sensitive-headers: 
 zuul.routes.sys.custom-sensitive-headers: true
 zuul.routes.sys.stripPrefix: true
 
-zuul.routes.doc.path: /DOC/**
+zuul.routes.doc.path: /doc/**
 zuul.routes.doc.serviceId: api-doc
 zuul.routes.doc.serviceName: 文件管理
 zuul.routes.doc.sensitive-headers: 
 zuul.routes.doc.custom-sensitive-headers: true
 zuul.routes.doc.stripPrefix: true
 
-zuul.routes.health.path: /HEALTH/**
+zuul.routes.health.path: /health/**
 zuul.routes.health.serviceId: api-health
 zuul.routes.health.serviceName: 系统监控中心
 zuul.routes.health.sensitive-headers: 
@@ -109,3 +109,6 @@ spring.jackson.default-property-inclusion: non_null
 spring.jackson.date-format: yyyy-MM-dd HH\:mm\:ss
 #指定jackson日期转换时区
 spring.jackson.time-zone: Asia/Shanghai
+
+management.endpoints.web.exposure.include: "*"
+management.endpoint.health.show-details: ALWAYS
