--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
 		<daijie.version>1.1.3-RELEASE</daijie.version>
 		<daijie.jenny.version>1.0.0-RELEASE</daijie.jenny.version>
-        <spring-cloud.version>Finchley.RC1</spring-cloud.version>
+        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <spring-boot.version>2.0.1.RELEASE</spring-boot.version>
 		<!-- 打包跳过单元测试 -->
 		<skipTests>true</skipTests>
