--- a/jenny-cloud/pom.xml
+++ b/jenny-cloud/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.daijie</groupId>
 		<artifactId>jenny</artifactId>
-		<version>1.0.0-RELEASE</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>jenny-cloud</artifactId>
 	<packaging>pom</packaging>
