--- a/jenny-common/jenny-common-model/jenny-common-model-sys/pom.xml
+++ b/jenny-common/jenny-common-model/jenny-common-model-sys/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.daijie</groupId>
 		<artifactId>jenny-common-model</artifactId>
-		<version>1.0.0-RELEASE</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>jenny-common-model-sys</artifactId>
 	<name>jenny-common-model-sys</name>
@@ -24,30 +24,40 @@
 
 	<build>
 		<plugins>
-			<!--MG的插件 -->
-			<plugin>
-				<groupId>org.mybatis.generator</groupId>
-				<artifactId>mybatis-generator-maven-plugin</artifactId>
-				<version>1.3.6</version>
-				<configuration>
-					<verbose>false</verbose>
-					<overwrite>false</overwrite>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>tk.mybatis</groupId>
-						<artifactId>mapper</artifactId>
-						<version>4.0.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
 			<plugin>
 				<groupId>org.daijie</groupId>
 				<artifactId>daijie-jdbc-plugin</artifactId>
 				<version>${daijie.version}</version>
 				<configuration>
-					<url>jdbc:mysql://localhost:3306/demo?user=root&amp;password=123456&amp;useUnicode=true&amp;charaterEncoding=utf-8</url>
-					<path>d://doc.html</path>
+					<datasources>
+						<datasource>
+							<driverClassName>com.mysql.jdbc.Driver</driverClassName>
+							<url>jdbc:mysql://localhost:3306/jenny_sys?useUnicode=true&amp;characterEncoding=UTF8&amp;serverTimezone=UTC</url>
+							<username>root</username>
+							<password>123456</password>
+						</datasource>
+					</datasources>
+					<model>
+						<!--自定义model生成规则的指定类-->
+						<!--<modeConfigurationClass></modeConfigurationClass>-->
+						<targetPackage>org.daijie.jenny.common.model.sys</targetPackage>
+						<targetProject>src/main/java</targetProject>
+						<isOverrideToString>true</isOverrideToString>
+						<isOverrideEquats>true</isOverrideEquats>
+						<isLombok>false</isLombok>
+						<isSerializeble>true</isSerializeble>
+					</model>
+					<mapper>
+						<!--自定义mapper生成规则的指定类-->
+						<!--<mapperConfigurationClass></mapperConfigurationClass>-->
+						<targetPackage>org.daijie.jenny.common.mapper.sys</targetPackage>
+						<targetProject>src/main/java</targetProject>
+						<interfacePackages>
+							<interfacePackage>org.daijie.jdbc.session.SessionMapper</interfacePackage>
+						</interfacePackages>
+					</mapper>
+					<path>d://work/</path>
+					<fileName>doc</fileName>
 				</configuration>
 			</plugin>
 		</plugins>
