--- a/jenny-common/jenny-common-model/pom.xml
+++ b/jenny-common/jenny-common-model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.daijie</groupId>
 		<artifactId>jenny-common</artifactId>
-		<version>1.0.0-RELEASE</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>jenny-common-model</artifactId>
 	<packaging>pom</packaging>
