--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.daijie</groupId>
 	<artifactId>jenny</artifactId>
-	<version>1.0.0-RELEASE</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
-		<daijie.version>1.1.4-RELEASE</daijie.version>
-		<daijie.jenny.version>1.0.0-RELEASE</daijie.jenny.version>
-        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-        <spring-boot.version>2.0.1.RELEASE</spring-boot.version>
+		<daijie.version>2.0.0</daijie.version>
+		<daijie.jenny.version>1.0.0</daijie.jenny.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
 		<!-- 打包跳过单元测试 -->
 		<skipTests>true</skipTests>
 	</properties>
